# simple

./: CMakeLists.txt  DoClangTidy.cmake  lcov.info
src/benchmark/: CMakeLists.txt  bench_main.cpp
src/calc/: CMakeLists.txt  calc.cpp  calc_unittest.cpp
src/include/: calc.h  calc_if.h  utility.h  utility_if.h
src/simple/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  test_utility.cpp
src/utility/: CMakeLists.txt  utility.cpp  utility.h  utility_unittest.cpp
